--- a/searxng/settings.yml
+++ b/searxng/settings.yml
@@ -1,9 +1,14 @@
 # see https://docs.searxng.org/admin/settings/settings.html#settings-use-default-settings
 use_default_settings: true
+search:
+  # sometimes it auto enables, not sure why
+  safe_search: 0
+  autocomplete: "duckduckgo"
+  default_lang: "en-US"
 server:
   # base_url is defined in the SEARXNG_BASE_URL environment variable, see .env and docker-compose.yml
-  secret_key: "ultrasecretkey"  # change this!
-  limiter: true  # can be disabled for a private instance
+  secret_key: "ultrasecretkey"  # changed by docker-init.sh
+  limiter: false
   image_proxy: true
 ui:
   static_use_hash: true
